Fix alignment on funding heading on homepage. Closes #46

--- a/source/assets/stylus/_home.styl
+++ b/source/assets/stylus/_home.styl
@@ -125,6 +125,9 @@
 			
 .home h2
 	text-align center
+	
+.home .fund-us h2
+	text-align left
 
 .downloads
 
